<resources>
    <string name="app_name">Way 2 Say</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_featured">Featured</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_store">Store</string>
    <string name="menu_repo">Repository</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_chatter">Chatter</string>
    <string name="menu_today">Today</string>
    <string name="submission_time">Submission Time</string>
    <string name="submission_stage">Submission Stage</string>
    <string name="value_points">Value Points</string>
    <string name="chatter_submit">Submit</string>
    <string name="menu_profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="last_sub_text">Last Submission</string>
    <string name="level_label">Level</string>
    <string name="total_exp">Total EXP</string>
    <string name="unspent_EXP">Unspent EXP</string>
    <string name="round_EXP" >Round EXP</string>
    <string name="unspent_round_EXP">Unspent Round EXP</string>
    <string name="upvotes_received">Upvotes Received</string>
    <string name="upvotes_given">Upvotes Given</string>
    <string name="downvotes_received">Downvotes Received</string>
    <string name="downvotes_given">Downvotes Given</string>
    <string name="tags_received">Tags Received</string>
    <string name="tags_given">Tags Given</string>
    <string name="total_entries">Total Entries</string>
    <string name="winning_entries">Winning Entries</string>
    <string name="finalist_entries">Finalist Entries</string>
    <string name="experience_section">Experience (EXP)</string>
    <string name="interactions_section">Interactions</string>
    <string name="entries_section">Entries</string>
    <string name="eliminations">Eliminations</string>
    <string name="top_tag_received">Top Tag Received</string>
    <string name="top_tag_given">Top Tag Given</string>
    <string name="eliminated_entries">Eliminated Entries</string>
    <string name="average_rank">Average Rank</string>
    <string name="average_post_length">Average Post Length</string>
    <string name="store_tags">TAGS</string>
    <string name="store_perks">PERKS</string>
    <string name="store_filters">FILTERS</string>
    <string name="store_sorters">SORTERS</string>
    <string name="store_customizations">CUSTOMIZATIONS</string>
    <string name="greeting">Greeting</string>
    <string name="inappropriate">Inappropriate</string>

    <string name="repo_sayings">Sayings</string>
    <string name="repo_questions">Questions</string>
    <string name="repo_expressions">Expressions</string>
    <string name="repo_formalities">Formalities</string>
    <string name="repo_misc">Miscellaneous</string>
    <string name="dailyPrompt">Prompt</string>
    <string name="app_motto">Kill Cliché</string>
    <string name="categoryTitle">Category</string>
</resources>
