<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/menu_featured" />
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/nav_chatter"
            android:title="@string/menu_today"/>
        <item
            android:id="@+id/nav_repo"
            android:icon="@drawable/nav_perks"
            android:title="@string/menu_repo" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/nav_stats"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/menu_settings" />
    </group>

    Add new section in nav drawer
    <item android:title="User">
    <menu>
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/nav_profile"
            android:title="@string/menu_profile" />
    </menu>
</item>

</menu>
