<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/signInFragment">

    <fragment
        android:id="@+id/nav_stats"
        android:name="com.example.chatterroyale.ui.stats.StatsFragment"
        android:label="@string/menu_stats" />

    <fragment
        android:id="@+id/nav_chatter"
        android:name="com.example.chatterroyale.ui.chatter.ChatterFragment"
        android:label="@string/menu_chatter" />

    <fragment
        android:id="@+id/nav_store"
        android:name="com.example.chatterroyale.ui.perks.StoreFragment"
        android:label="@string/menu_store" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.chatterroyale.ui.settings.SettingsFragment"
        android:label="@string/menu_settings">
        <action
            android:id="@+id/action_nav_settings_to_colorFragment"
            app:destination="@id/colorFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.chatterroyale.ui.home.HomeFragment"
        android:label="@string/menu_home" />
    <fragment
        android:id="@+id/colorFragment"
        android:name="com.example.chatterroyale.ui.settings.ColorFragment"
        android:label="ColorFragment" />
    <fragment
        android:id="@+id/chatterCrafter"
        android:name="com.example.chatterroyale.ui.chatter.ChatterCrafter"
        android:label="Crafter" />
    <action android:id="@+id/action_global_chatterCrafter" app:destination="@id/chatterCrafter" />
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.chatterroyale.ui.perks.SignInFragment"
        android:label="SignInFragment" >
        <action
            android:id="@+id/action_signInFragment_to_nav_home"
            app:popUpTo="@+id/signInFragment"
            app:popUpToInclusive="true"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.chatterroyale.ui.profile.ProfileFragment"
        android:label="@string/menu_profile">
        <action
            android:id="@+id/action_profileFragment_to_signInFragment2"
            app:destination="@+id/signInFragment"
            app:launchSingleTop="false"
            app:popUpTo="@+id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>