<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/storeScroller"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp">

                <Button
                    android:id="@+id/storeTags"
                    android:layout_width="403dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:shadowColor="@color/colorAccentDark"
                    android:text="@string/repo_sayings"
                    android:textColor="@color/colorAccentDark" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp">

                <Button
                    android:id="@+id/storePerks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/repo_questions"
                    android:textColor="@color/colorAccentDark" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp">

                <Button
                    android:id="@+id/storeFilters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/repo_expressions"
                    android:textColor="@color/colorAccentDark" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp">

                <Button
                    android:id="@+id/storeSorters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/repo_formalities"
                    android:textColor="@color/colorAccentDark" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp">


                <Button
                    android:id="@+id/storeCustomizations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/repo_misc"
                    android:textColor="@color/colorAccentDark" />

            </TableRow>

        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>