<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible"
    app:cardBackgroundColor="#FFC107"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/entryPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tableLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal|center_vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/submissionTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submission_time"
                    android:textSize="10sp"
                    android:visibility="visible" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/submissionTimeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="right"
                    android:inputType="time"
                    android:textSize="10sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/submissionStage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submission_stage"
                    android:textSize="10sp"
                    android:visibility="visible" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/submissionStageValue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="right"
                    android:inputType="number"
                    android:textSize="10sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/winningValuePoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_points"
                    android:textSize="10sp"
                    android:visibility="visible" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/winningValuePointsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="right"
                    android:inputType="time"
                    android:textSize="10sp" />

            </TableRow>

        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>